gateway/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-http-service
  labels:
    w3a-app: gateway
  namespace: w3a
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    w3a-app: gateway
